# raspiarduninoAI

./: GUI_IMPLEMENTATION.md  HARDWARE_SETUP.md  LICENSE  NOTICE  README.md  advanced_settings.py  app_self_update.py  config.py  core.py  example.py  gui.py  gui_launcher.py  hardware.py  policies.py  pyproject.toml  requirements.txt  run_seraphina_gui.py  setup_wizard.py  state.py  test_core.py  test_gui.py  test_policies.py  test_state.py  visualizations.py
.github/workflows/: release-testpypi.yml  release.yml  test.yml
tests/: test_self_update.py
