[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspiarduninoai"
version = "0.1.0"
description = "Hopper gate valve + telescope control integration"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["hopper", "control", "automation", "raspberry-pi", "arduino"]
authors = [
    {name = "jmwilson2019"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jmwilson2019/raspiarduninoAI"
"Bug Reports" = "https://github.com/jmwilson2019/raspiarduninoAI/issues"
"Source" = "https://github.com/jmwilson2019/raspiarduninoAI"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "test_*.py",
    "example.py",
    "*/site-packages/*",
]
