[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspiarduninoai"
version = "0.1.1"
description = "Hopper gate valve + telescope control integration"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["hopper", "control", "automation", "raspberry-pi", "arduino"]
authors = [
    {name = "jmwilson2019"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.13.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pip-audit>=2.7.0",
    "build>=1.2.0",
]

[project.scripts]
raspiarduninoai-gui = "gui_launcher:main"

[project.urls]
"Homepage" = "https://github.com/jmwilson2019/raspiarduninoAI"
"Bug Reports" = "https://github.com/jmwilson2019/raspiarduninoAI/issues"
"Source" = "https://github.com/jmwilson2019/raspiarduninoAI"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "test_*.py",
    "example.py",
    "*/site-packages/*",
]

[tool.setuptools]
py-modules = [
    "advanced_settings",
    "config",
    "core",
    "example",
    "gui",
    "gui_launcher",
    "hardware",
    "policies",
    "setup_wizard",
    "state",
    "visualizations",
]
